# SalesOS-AI

./: .env.example  .gitignore  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 12bcca809a32_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  booking.py  conversation_intelligence.py  enrichment.py  outreach.py  qualification.py  registry.py  tools.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: auth.py  (+10 more)
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  feature_flags.py  logging.py  security.py  telemetry.py
backend/app/db/: __init__.py  base.py  qdrant.py  redis.py  session.py
backend/app/events/: __init__.py  bus.py  communication_handlers.py  handlers.py  types.py
backend/app/integrations/: __init__.py
backend/app/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  activity.py  agent_run.py  api_key.py  audit_log.py  company.py  conversation.py  domain_event.py  email.py  lead.py  meeting.py  message.py  organization.py  user.py  workflow.py
backend/app/prompts/: __init__.py  booking_v1.py  conversation_intelligence_v1.py  enrichment_v1.py  outreach_v1.py  qualification_v1.py  registry.py
backend/app/repositories/: __init__.py  activity_repo.py  base.py  company_repo.py  conversation_repo.py  email_repo.py  lead_repo.py  lead_score_repo.py  meeting_repo.py  user_repo.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  common.py  communication.py  copilot.py  lead.py  sales_execution.py
backend/app/services/: __init__.py  activity_service.py  assignment_engine.py  auth_service.py  communication_service.py  conversation_service.py  copilot_service.py  crm_service.py  dashboard_service.py  decision_engine.py  escalation_service.py  followup_service.py  lead_service.py  meeting_service.py  sla_service.py  state_machine.py
backend/app/tasks/: __init__.py  celery_app.py  communication_tasks.py  sales_execution_tasks.py
backend/app/utils/: __init__.py
backend/app/workflows/: __init__.py  engine.py  lead_lifecycle.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py
(+61 files in other folders)
